TFP-4617: Utvider innsending og innsynv2 med morUføretrygd field + sonarcloud fikses