@@ -9,7 +9,6 @@ import static org.springframework.util.StringUtils.capitalize;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -53,7 +52,7 @@ public class ArbeidsforholdConnection extends AbstractWebClientConnection {
                 .stream()
                 .map(mapper::tilArbeidsforhold)
                 .sorted(comparing(EnkeltArbeidsforhold::getArbeidsgiverNavn))
-                .collect(Collectors.toList());
+                .toList();
         LOG.info("Hentet {} arbeidsforhold for perioden fra {}", arbeidsforhold.size(), fom);
         LOG.trace("Arbeidsforhold: {}", arbeidsforhold);
         return arbeidsforhold;
